Add English to Flying Dehyphenator

--- a/ordia/app/templates/flying-dehyphenator.html
+++ b/ordia/app/templates/flying-dehyphenator.html
@@ -434,6 +434,7 @@
           <option value="Q9035">Dansk - da - Danish</option>
           <option value="Q188">Deutsch - de - German</option>
           <option value="Q5317225">Kadazandusun - dtp - Kadazandusun</option>
+	  <option value="Q1860">English - en - English</option>
 	  <option value="Q143">Esperanto - eo - Esperanto</option>
           <option value="Q1321">Español - es - Spanish</option>
           <option value="Q9240">Bahasa Indonesia - id - Indonesian</option>
