Fix #228 Flying Dehyphenator languages
Add more languages based on SPARQL query

--- a/ordia/app/templates/flying-dehyphenator.html
+++ b/ordia/app/templates/flying-dehyphenator.html
@@ -429,17 +429,47 @@
     <div id="language-selection">
         <label for="language-selector">Select Language:</label>
         <select id="language-select" class="form-control">
-	  <option value="Q33151">Banjar - bjn - Banjar</option>
+	  <option value="Q14196">Afrikaans - af - Afrikaans</option>
+	  <option value="Q33070">Basa Bali - ban - Balinese</option>
+	  <option value="Q33017">Hata Batak Toba - bbc - Toba Batak</option>
+	  <option value="Q33284">Bikol Sentral - bcl - Central Bikol</option>
+	  <option value="Q9091">беларуская мова - be - Belarusian</option>
+	  <option value="Q33151">Bahasa Banjar - bjn - Banjar</option>
+	  <option value="Q7026">català - ca - Catalan</option>
 	  <option value="Q9056">čeština - cs - Czech</option>
-          <option value="Q9035">Dansk - da - Danish</option>
-          <option value="Q188">Deutsch - de - German</option>
-          <option value="Q5317225">Kadazandusun - dtp - Kadazandusun</option>
+	  <option value="Q9035">dansk - da - Danish</option>
+	  <option value="Q188">Deutsch - de - German</option>
+	  <option value="Q5317225">boros Kadazandusun - dtp - Kadazandusun</option>
 	  <option value="Q1860">English - en - English</option>
 	  <option value="Q143">Esperanto - eo - Esperanto</option>
-          <option value="Q1321">Español - es - Spanish</option>
-          <option value="Q9240">Bahasa Indonesia - id - Indonesian</option>
-          <option value="Q36163">Kurmancî - ku - Kurmanji</option>
-	  <option value="Q809">Język polski - pl - Polish</option>
+	  <option value="Q1321">español - es - Spanish</option>
+	  <option value="Q8752">euskara - eu - Basque</option>
+	  <option value="Q25258">Føroyskt mál - fo - Faroese</option>
+	  <option value="Q6654">hrvatski jezik - hr - Croatian</option>
+	  <option value="Q9067">magyar - hu - Hungarian</option>
+	  <option value="Q9240">bahasa Indonesia - id - Indonesian</option>
+	  <option value="Q294">íslenska - is - Icelandic</option>
+	  <option value="Q652">italiano - it - Italian</option>
+	  <option value="Q33549">Jawa - jv - Javanese</option>
+	  <option value="Q36163">kurmancî - ku - Kurmanji</option>
+	  <option value="Q9051">Lëtzebuergesch - lb - Luxembourgish</option>
+	  <option value="Q9083">lietuvių kalba - lt - Lithuanian</option>
+	  <option value="Q13324">Bahaso Minangkabau - min - Minangkabau</option>
+	  <option value="Q9237">bahasa Melayu - ms - Malay</option>
+	  <option value="Q9166">Malti - mt - Maltese</option>
+	  <option value="Q33845">Lengua napulitana - nap - Neapolitan</option>
+	  <option value="Q25167">bokmål - nb - Bokmål</option>
+	  <option value="Q7411">Nederlands - nl - Dutch</option>
+	  <option value="Q809">język polski - pl - Polish</option>
+	  <option value="Q58680">پښتو - ps - Pashto</option>
+	  <option value="Q5146">português - pt - Portuguese</option>
+	  <option value="Q7737">русский язык - ru - Russian</option>
+	  <option value="Q34002">Sunda - su - Sundanese</option>
+	  <option value="Q9027">svenska - sv - Swedish</option>
+	  <option value="Q256">Türkçe - tr - Turkish</option>
+	  <option value="Q32724">vèneto - vec - Venetian</option>
+	  <option value="Q32747">vepsän kel' - vep - Veps</option>
+	  
           <!-- Add more languages as needed -->
         </select>
         <button id="start-button" class="btn btn-primary mt-3">Start Game</button>
