Fix #236 Enable Dagbani in text-to-lexemes

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -96,6 +96,7 @@ ORDER BY ?word
 	  <option value="br"{% if text_language == 'br' %} selected="selected"{% endif %}>Brezhoneg - br - Breton</option>
 	  <option value="cs"{% if text_language == 'cs' %} selected="selected"{% endif %}>Čeština - cs - Czech</option>
 	  <option value="da"{% if text_language == 'da' %} selected="selected"{% endif %}>Dansk - da - Danish</option>
+	  <option value="dag"{% if text_language == 'dag' %} selected="selected"{% endif %}>Dagbanli - dag - Dagbani</option>
 	  <option value="de"{% if text_language == 'de' %} selected="selected"{% endif %}>Deutsch - de - German</option>
 	  <option value="el"{% if text_language == 'el' %} selected="selected"{% endif %}>ελληνικά - el - Greek</option>
  	  <option value="en"{% if text_language == 'en' %} selected="selected"{% endif %}>English - en - English</option>
