Fix #239 guess word from pronunciation

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -108,7 +108,10 @@
 			<a class="nav-link" href="{{ url_for('app.show_guess_word_from_image') }}">Guess word from image</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_flying_dehyphenator') }}">Flying Dehyphenator</a>
+			<a class="nav-link" href="{{ url_for('app.show_guess_word_from_pronunciation') }}">Guess word from pronunciation</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_flying_dehyphenator') }}">Flying dehyphenator</a>
 		    </li>
 		</ul>
 	    </div>
