--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -111,6 +111,9 @@
 			<a class="nav-link" href="{{ url_for('app.show_guess_word_from_pronunciation') }}">Guess word from pronunciation</a>
 		    </li>
 		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_guess_image_from_pronunciation') }}">Guess image from pronunciation</a>
+		    </li>
+		    <li class="nav-item">
 			<a class="nav-link" href="{{ url_for('app.show_flying_dehyphenator') }}">Flying dehyphenator</a>
 		    </li>
 		</ul>
