--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -96,28 +96,9 @@
 	    </div>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" data-toggle="collapse" data-target="#nav-games">Games</a>
+		<a class="nav-link" href="{{ url_for('app.show_game_index') }}">Games</a>
 	    </li>
 
-	    <div id="nav-games" class="collapse">
-		<ul class="nav navbar-nav">
-		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_guess_the_gender') }}">Guess the gender</a>
-		    </li>
-		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_guess_word_from_image') }}">Guess word from image</a>
-		    </li>
-		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_guess_word_from_pronunciation') }}">Guess word from pronunciation</a>
-		    </li>
-		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_guess_image_from_pronunciation') }}">Guess image from pronunciation</a>
-		    </li>
-		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_flying_dehyphenator') }}">Flying dehyphenator</a>
-		    </li>
-		</ul>
-	    </div>
 	    <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_statistics') }}">Statistics</a>
 	    </li>
