Fix #242 Better randomization in game Better randomization in Guess Word From Pronunciation This PR include styling of the Javascript with change of indentation. Furthermore there is a fix on the game index page

--- a/ordia/app/templates/game_index.html
+++ b/ordia/app/templates/game_index.html
@@ -87,7 +87,7 @@
 	  </div>
 	  <div class="card-body">
 	    <dl>
-	      <dt><a href="/guess-word-from-image">Guess Image from Pronunciation</a></dt>
+	      <dt><a href="/guess-image-from-pronunciation">Guess Image from Pronunciation</a></dt>
 	      <dd>Guess the correct image representing a word
 		that is pronunced.</dd>
 	    </dl>
