Fix #231 Acknowledgement to Dong Nguyen

--- a/ordia/app/templates/flying-dehyphenator.html
+++ b/ordia/app/templates/flying-dehyphenator.html
@@ -509,6 +509,11 @@
         <button id="play-again-button" class="btn btn-success">Play Again</button>
     </div>
 
+    <!-- Acknowledgment Note -->
+    <div class="text-center mt-4">
+      <p>This game was inspired by the game by Nguyễn Hà Đông.</p>
+    </div>
+    
 </div>
 
 {% endblock %}
