--- a/ordia/app/templates/lexical_category_language.html
+++ b/ordia/app/templates/lexical_category_language.html
@@ -5,6 +5,31 @@
 {{super()}}
 
 <script type="text/javascript">
+  lexicalCategoriesSparql = `
+SELECT 
+  ?number_of_forms
+  ?grammatical_feature ?grammatical_featureLabel
+  ?example_form (SUBSTR(STR(?example_form), 32) AS ?example_formLabel)
+WITH {
+  SELECT 
+    (COUNT(?form) AS ?number_of_forms)
+    ?grammatical_feature 
+    (SAMPLE(?form) AS ?example_form)
+  WHERE {
+    ?lexeme wikibase:lexicalCategory wd:{{ q1 }} ;
+            dct:language wd:{{ q2 }} ;
+            ontolex:lexicalForm ?form .
+    ?form wikibase:grammaticalFeature ?grammatical_feature .
+  }
+  GROUP BY ?grammatical_feature
+} AS %grammatical_features
+WHERE {
+  INCLUDE %grammatical_features
+  SERVICE wikibase:label { bd:serviceParam wikibase:language "[AUTO_LANGUAGE],mul,en". }
+}
+ORDER BY DESC(?number_of_forms)
+`;
+  
     lexemesSparql = `
 # List lexemes wrt. a lexical category and language
 SELECT
@@ -28,7 +53,7 @@ SELECT
   BIND(STRLEN(?lexemeLabel) AS ?length)
 }
 ORDER BY ?lexemeLabel ?length ?number_of_compounds
-LIMIT 10000
+LIMIT 1000
 `
 
 
@@ -38,6 +63,11 @@ LIMIT 10000
      sparqlToDataTable(lexemesSparql, "#lexemes", {
 	 linkPrefixes: {
 	     lexeme: '../../../',
+	 }});
+     sparqlToDataTable(lexicalCategoriesSparql, "#lexical-categories", {
+	 linkPrefixes: {
+	     grammatical_feature: '../../../lexical-category/',
+	     example_form: '../../../',
 	 }});
  });
 
@@ -69,9 +99,15 @@ LIMIT 10000
 
 <hr/>
 
+
 <h2>Lexemes</h2>
 
 <table class="table table-hover" id="lexemes"></table>
+
+
+<h2>Lexical categories</h2>
+
+<table class="table table-hover" id="lexical-categories"></table>
 
 
 {% endblock %}
