Fix #154 Rename compounds
"Lexemes that have this lexeme as part"

--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -364,7 +364,7 @@ WHERE {
 
     <hr/>
     
-    <h2>Compounds</h2>
+    <h2>Lexemes that have this lexeme as part</h2>
 
     <table class="table table-hover" id="compounds"></table>
 
