--- a/ordia/app/templates/guess-image-from-pronunciation.html
+++ b/ordia/app/templates/guess-image-from-pronunciation.html
@@ -239,6 +239,8 @@
       <select id="language-select" class="form-control mb-3">
 	<option value="Q13955">العربية - ar - Arabic</option>
 	<option value="Q29540">Boarisch - bar - Bavarian</option>
+	<option value="Q9091">беларуская мова - be - Belarusian</option>
+	<option value="Q7918">български език - bg - Bulgarian</option>
 	<option value="Q33151">Bahasa Banjar - bjn - Banjar</option>
 	<option value="Q9610">বাংলা - bn - Bangla</option>
 	<option value="Q7026">català - ca - Catalan</option>
@@ -257,6 +259,7 @@
 	<option value="Q9288">עברית - he - Hebrew</option>
 	<option value="Q652">italiano - it - Italian</option>
 	<option value="Q5287">日本語 - ja - Japanese</option>
+	<option value="Q9176">한국어 - ko - Korean</option>
 	<option value="Q36236">മലയാളം - ml - Malayalam</option>
 	<option value="Q9237">bahasa Melayu - ms - Malay</option>
 	<option value="Q25167">bokmål - nb - Bokmål</option>
