--- a/ordia/app/templates/game_index.html
+++ b/ordia/app/templates/game_index.html
@@ -24,7 +24,7 @@
 	      <dd>
 		Guess the gender of nouns.
 		Inspired by Lea Lacroix's original DerDieDas game, but
-		works for multiple language.
+		works for multiple languages.
 	      </dd>
 	      
 	    </dl>
@@ -36,7 +36,7 @@
 		Given the start part of a word use the spacebar
 		to move the word and hit the next part of the
 		word. Only hyphenations described with
-		the Unicode hyphenation character works.
+		the Unicode hyphenation character work.
 	      </dd>
 	      
 	    </dl>
