--- a/ordia/app/templates/game_index.html
+++ b/ordia/app/templates/game_index.html
@@ -33,7 +33,7 @@
 	      <dt><a href="/flying-dehyphenator">Flying Dehyphenator</a></dt>
 	      <dd>
 		Dehyphenate words.
-		Given the start part of a word use the spacebar
+		Given the start part of a word, use the spacebar
 		to move the word and hit the next part of the
 		word. Only hyphenations described with
 		the Unicode hyphenation character work.
@@ -55,7 +55,7 @@
 	  <div class="card-body">
 	    <dl>
 	      <dt><a href="/guess-word-from-image">Guess Word from Image</a></dt>
-	      <dd>Guess the correct word out of three based on a image of the meaning of the word.</dd>
+	      <dd>Guess the correct word out of three based on an image of a meaning of the word.</dd>
 	    </dl>
 	    
 	  </div>
