Fix #266: implement guess form from text game

--- a/ordia/app/templates/game_index.html
+++ b/ordia/app/templates/game_index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 
-{% block page_content %}
 
+
+{% block page_content %}
 
 <div>
   
@@ -29,6 +30,14 @@
 	      
 	    </dl>
 	    
+	    <dl>
+	      <dt><a href="/guess-form-from-text">Guess Form from Text</a></dt>
+	      <dd>
+		Guess the inflected/conjugated form of a word in a text (sentence).
+	      </dd>
+	      
+	    </dl>
+
 	    <dl>
 	      <dt><a href="/flying-dehyphenator">Flying Dehyphenator</a></dt>
 	      <dd>
