--- a/ordia/app/templates/guess-the-gender.html
+++ b/ordia/app/templates/guess-the-gender.html
@@ -32,6 +32,7 @@
             'nl': 'Q7411',     // Dutch
 	    'sv': 'Q9027',     // Swedish
 	    'uk': 'Q8798',     // Ukrainian
+	    'pa': 'Q58635',     // Punjabi
             // Add more languages and their Wikidata Q-IDs as needed
         };
 
@@ -247,6 +248,7 @@
                 <option value="nl">Nederlands - nl - Dutch</option>
 	        <option value="sv">Svenska - sv - Swedish</option>
 	        <option value="uk">Українська - uk - Ukrainian</option>
+	        <option value="pa">ਪੰਜਾਬੀ - pa - Punjabi</option>
                 <!-- Add more languages as needed -->
             </select>
             <button class="btn btn-success" onclick="startNewGame()">New Game</button>
