--- a/ordia/app/templates/guess-word-from-pronunciation.html
+++ b/ordia/app/templates/guess-word-from-pronunciation.html
@@ -228,6 +228,7 @@
 	<option value="Q25167">bokmål - nb - Bokmål</option>
 	<option value="Q7411">Nederlands - nl - Dutch</option>
 	<option value="Q33810">ଓଡ଼ିଆ - or - Odia</option>
+	<option value="Q58635">ਪੰਜਾਬੀ  - pa - Punjabi</option>
 	<option value="Q809">język polski - pl - Polish</option>
 	<option value="Q5146">português - pt - Portuguese</option>
 	<option value="Q5218">Qichwa - qu - Quechua</option>
