Fix #276 Add Greenlandic to Flying De...

--- a/ordia/app/templates/flying-dehyphenator.html
+++ b/ordia/app/templates/flying-dehyphenator.html
@@ -451,6 +451,7 @@
 	  <option value="Q294">íslenska - is - Icelandic</option>
 	  <option value="Q652">italiano - it - Italian</option>
 	  <option value="Q33549">Jawa - jv - Javanese</option>
+	  <option value="Q25355">Kalaallisut - kl - Greenlandic</option>
 	  <option value="Q36163">kurmancî - ku - Kurmanji</option>
 	  <option value="Q9051">Lëtzebuergesch - lb - Luxembourgish</option>
 	  <option value="Q9083">lietuvių kalba - lt - Lithuanian</option>
