--- a/ordia/app/templates/guess-word-from-image.html
+++ b/ordia/app/templates/guess-word-from-image.html
@@ -115,10 +115,14 @@
             }
         }
 
-        // Shuffle array
+        // Fisher-Yates shuffle array
         function shuffleArray(array) {
-            return array.sort(() => Math.random() - 0.5);
-        }
+	    for (let i = array.length - 1; i > 0; i--) {
+		const j = Math.floor(Math.random() * (i + 1));
+		[array[i], array[j]] = [array[j], array[i]];
+	    }
+	    return array;
+	}
 
         // Show current question
         function showQuestion() {
